# data-morph

./: .gitignore  AI_Builders_2026_Project_Plan.docx  CLAUDE.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
data/test_set/uc1_csv_to_json_nested/medium_01/: expected.json  input.csv  meta.json
data/test_set/uc1_csv_to_json_nested/simple_01/: expected.json  input.csv  meta.json
data/test_set/uc1_csv_to_json_nested/simple_02/: expected.json  input.csv  meta.json
data/test_set/uc2_json_to_csv_flatten/medium_01/: expected.csv  input.json  (+1 more)
docs/: W2_baseline.md  progression.md
notebook/: gemma_openrouter.py
results/baseline_2026-04-17_192231/: summary.json
results/baseline_2026-04-17_192259/: summary.json
results/baseline_gemma_2026-05-13_185723/: summary.json
results/gemma/2026-05-13_smoke_gemma_1case_uc2-simple01/: summary.json
results/gemma/baseline_gemma_2026-05-13_175512/: summary.json
results/opus/2026-05-13_regression_opus_3cases_uc1_task10/: summary.json
results/opus/2026-05-13_smoke_opus_1case_uc1-simple01_task6-cli-verify/: summary.json
results/w2_baseline/baseline_2026-04-17_192142/: summary.json
scripts/: plot_baseline.py  run_baseline.py
skills/: file_conversion_teacher.md
src/evaluation/: metrics.py  output_cleanup.py  runner.py  teacher.py
src/extractor/: __init__.py  base.py  csv_extractor.py  sampler.py  warning_rules.py
src/models/: gemma_mlx.py
tests/: test_metrics.py  test_output_cleanup.py
tests/extractor/: test_base.py  test_csv_extractor.py  test_sampler.py  test_warnings.py
tests/extractor/fixtures/: duplicate_columns.csv  headerless.csv  large_file.csv  mixed_dtype.csv  numeric_columns.csv  repeating_entity.csv  simple_users.csv
(+135 files in other folders)
