[project]
name = "data-morph"
version = "0.1.0"
description = "Distill a CSV/JSON/TXT file-conversion capability from Claude Opus into a fine-tuned Gemma 2B (LoRA/QLoRA)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "mlx-lm>=0.31.3",
    "mlx-vlm>=0.5.0",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "hf-transfer>=0.1.9",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
markers = [
    "performance: opt-in slow tests; run with `pytest -m performance`",
]
addopts = "-m 'not performance'"
